--- a/git-variables.css
+++ b/git-variables.css
@@ -6,7 +6,7 @@
     --controller-bumper-image: url(https://cdn.statically.io/gh/AlexanderSkrock/GamePadViewer/master/images/bumper.svg);
     --controller-meta-pressed-image: url(https://cdn.statically.io/gh/AlexanderSkrock/GamePadViewer/master/images/meta.svg);
     --controller-start-image: url(https://cdn.statically.io/gh/AlexanderSkrock/GamePadViewer/master/images/start-select.svg);
-    --controller-button-image: url(https://cdn.statically.io/gh/AlexanderSkrock/GamePadViewer/master/images/abxy.svg);
+    --controller-button-image: url(https://cdn.jsdelivr.net/gh/alnekhaish/GamePadViewer@master/images/abxy.svg);
     --controller-stick-image: url(https://cdn.statically.io/gh/AlexanderSkrock/GamePadViewer/master/images/stick.svg);
     --controller-face-image: url(https://cdn.statically.io/gh/AlexanderSkrock/GamePadViewer/master/images/dpad.svg);
 }
